产品搜索和模式搜索